--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -5,7 +5,7 @@
     "version":"0.1",
     
     "chrome_url_overrides":{
-    "newtab":"extension.html"
+    "newtab":"iframe.html"
 },
 
 "browser_action":{
