--- a/extension/requirements.txt
+++ b/extension/requirements.txt
@@ -1,9 +1,15 @@
 beautifulsoup4==4.9.3
 bs4==0.0.1
+certifi==2020.12.5
+chardet==4.0.0
+idna==2.10
 lxml==4.6.3
+more-itertools==8.7.0
 numpy==1.20.2
 oauthlib==3.1.0
+PySocks==1.7.1
+pytz==2021.1
 requests==2.25.1
-requests-oauthlib==1.3.0
+six==1.15.0
 soupsieve==2.2.1
-urllib3==1.26.5
+urllib3==1.26.4
