--- a/.github/workflows/update_extension.yml
+++ b/.github/workflows/update_extension.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Install dependencies
       run: |
           python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r extension/requirements.txt; fi
+          if [ -f extension/requirements.txt ]; then pip install -r extension/requirements.txt; fi
     - name: Run the program
       run: |
         python extension/pythonextension.py
