--- a/.github/workflows/update_extension.yml
+++ b/.github/workflows/update_extension.yml
@@ -2,8 +2,8 @@ name: Update extension from RSS
 
 on: 
   workflow_dispatch:
-#  schedule:
- # - cron: "24 13,15,17,18,19,21,23,1 * * *"
+  schedule:
+  - cron: "24 13,17,19,23 * * *"
 
 jobs:
   run_extension_update:
