--- a/.github/workflows/update_extension.yml
+++ b/.github/workflows/update_extension.yml
@@ -27,7 +27,7 @@ jobs:
       run: |
         python extension/extension.py
     - name: Commit & Push changes
-      uses: actions-js/push@master
+      uses: actions-js/push@main
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        branch: main
+        branch: master
